# ska-oso-slt-services

./: .gitignore  .gitlab-ci.yml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml
charts/ska-oso-slt/: Chart.yaml  values.yaml
charts/ska-oso-slt-services/: Chart.yaml  values.yaml
charts/ska-oso-slt-services-umbrella/: Chart.yaml  values.yaml
charts/ska-oso-slt-services-umbrella/data/: create_tables.sql
charts/ska-oso-slt-services/templates/: _helpers.tpl  environment.yaml  kafka.yaml  rest.yaml
charts/ska-oso-slt-services/tests/: environment_test.yaml
charts/ska-oso-slt-umbrella/: Chart.yaml
docs/openapi/: openapi.json
docs/src/: CHANGELOG.rst  conf.py  index.rst
docs/src/api/: index.rst  rest_api.rst
docs/src/deveoper/: shift_models.puml  slt.puml
docs/src/overview/: introduction.rst
docs/src/python/: poll_oda_log_data.rst
docs/src/rest_api/: restapi.rst
docs/src/slt_guide/: slt_guide.rst
src/ska_oso_slt_services/: __init__.py  app.py  main.py
src/ska_oso_slt_services/backend/models/: metadata.py  slt.py  slt_image.py  slt_log.py
src/ska_oso_slt_services/common/: __init__.py  constant.py  custom_exceptions.py  date_utils.py  error_handling.py  file_upload.py  metadata_mixin.py  utils.py
src/ska_oso_slt_services/data_access/: config.py  eda_data_access.py  logdb_data_access.py  postgres_data_acess.py
src/ska_oso_slt_services/data_access/postgres/: base_mapping.py  crud.py  execute_query.py  mapping.py  mapping_factory.py  shift_crud.py  sqlqueries.py
src/ska_oso_slt_services/database/: config.py  eda_db.py  log_db.py
src/ska_oso_slt_services/domain/: app_model.py  model.py  models.py  shift_models.py
src/ska_oso_slt_services/infra/: connection_init.py  create_table_queries.txt  crud.py  ed_db.py  eda_db.py  log_db.py  postgresql.py
src/ska_oso_slt_services/infra/repository_classes/: base_repository_mappings.py  data_repository_mappings.py
src/ska_oso_slt_services/infrastructure/: abstract_base.py  config.py  eda_connection.py  logdb_connection.py  mapping.py  postgres_connection.py  postgresql.py
src/ska_oso_slt_services/infrastructure/postgres/: mapping.py  sqlqueries.py
src/ska_oso_slt_services/infrastructure/postress/: mapping.py  postgres_shift_repository.py  sqlqueries.py
src/ska_oso_slt_services/models/: data_models.py  metadata.py  shiftmodels.py  slt.py  slt_image.py  slt_log.py
src/ska_oso_slt_services/pydantic_data_models/: base_data_models.py  data_models.py
src/ska_oso_slt_services/repositories/: abstract_base.py  postgres_shift_repository.py
src/ska_oso_slt_services/repository/: eda_shift_repository.py  logdb_shift_repository.py  postgres_shift_repository.py  postgress_shift_repository.py  shift_repository.py
src/ska_oso_slt_services/rest/: __init__.py  flask_slt.py  query.py  wsgi.py
src/ska_oso_slt_services/rest/api/: old_resources.py  resource.py  resources.py
src/ska_oso_slt_services/rest/openapi/: old_slt-openapi-v1.yaml  slt-dbschema-openapi-v1.yaml  slt-jsonschema.yaml  slt-openapi-v1.yaml  slt-schema-openapi-v1.yaml
src/ska_oso_slt_services/routers/: shift_router.py
src/ska_oso_slt_services/routers/response_files/: multiple_shift_response.json  oda_log_info.json  shift_annotation.json  shift_comment.json  shift_log_comments.json  shift_response.json
src/ska_oso_slt_services/services/: base_repository_service.py  config.py  media_service.py  shift_annotation_service.py  shift_comments_service.py  shift_logs_comment_service.py  shift_service.py  shiftlogs_comment_service.py
src/ska_oso_slt_services/utils/: codec.py  date_utils.py  exception.py  metadata_mixin.py  metadatamixin.py  s3_bucket.py  sqlqueries.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/ska-oso-slt-services/: test_ska_oso_slt_services.py
tests/unit/ska_oso_slt_services/: util.py
tests/unit/ska_oso_slt_services/common/: test_error_handling.py  test_metadata_mixin.py  test_skuid.py
tests/unit/ska_oso_slt_services/data_access/: test_execute_query.py  test_mapping_factory.py  test_sqlquries.py
tests/unit/ska_oso_slt_services/database/: test_eda_db.py  test_log_db.py
tests/unit/ska_oso_slt_services/files/: testfile_sample_put_shift_data.json  testfile_sample_shift_data.json  testfile_sample_shift_history_data.json  testfile_sample_shift_log_data.json
tests/unit/ska_oso_slt_services/infrastructure/: test_eda_db.py
tests/unit/ska_oso_slt_services/repository/: test_postgres_repository.py  test_postgres_shift_repository.py
tests/unit/ska_oso_slt_services/rest/: conftest.py  test_resources.py  test_rest.py
tests/unit/ska_oso_slt_services/routers/: test_routers.py
tests/unit/ska_oso_slt_services/routers/test_data_files/: testfile_current_shift_data.json  testfile_existing_shift_data.json  testfile_get_shift_comment_image_data.json  testfile_initial_log_comment_data.json  testfile_patch_shift_log_data.json  testfile_sample_shift_data.json  testfile_sample_shift_history_data.json  testfile_shift_annotation_data.json  testfile_shift_comment_data.json  testfile_shift_comment_image_data.json  testfile_shift_log_comment_image_data.json  testfile_shift_log_comments_data.json  testfile_update_shift_data.json
tests/unit/ska_oso_slt_services/service/: test_shift_service.py
tests/unit/ska_oso_slt_services/services/: test_base_repository_service.py  test_services.py
tests/unit/ska_oso_slt_services/test_data_files/: testfile_sample_eb.json  testfile_sample_multiple_ebs_with_status.json  testfile_sample_post_shift_data.json
tests/unit/ska_oso_slt_services/util/: test_s3_bucket.py
tests/unit/ska_oso_slt_services/utils/: test_s3_bucket.py  test_utils.py
