[tool.poetry]
name = "ska-oso-slt-services"
version = "0.1.0"
description = "Shift log tool"
authors = ["Team Nakshatra"]
license= "BSD-3-Clause"
readme = "README.md"

[[tool.poetry.source]]
name = 'skao'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[[tool.poetry.source]]
name = "PyPI-public"
url = 'https://pypi.org/simple'

[tool.poetry.dependencies]
python = "^3.10"
python-dateutil = "^2.8.2"
ska-ser-logging = "^0.4.1"
ska-db-oda  = "5.3.3"
# ska-db-oda = { version="5.3.3+dev.cea0b078b", source="gitlab-ska-db-oda" }
pydantic = "^2.7"
elasticsearch = "^8.14.0"
pyhdbpp = "^1.5.12"
annotated-types = "^0.7.0"
elastic-transport = "^8.15.0"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
tzdata = "^2024.2"
deepdiff = "^7.0.0"




[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
black = "^24.0.0"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pylint-junit = "^0.3.2"
flake8 = "^7.0.0"
deepdiff = "^7.0.0"


[tool.poetry.group.docs.dependencies]
sphinxcontrib-openapi= "^0.7.0"
myst-parser = "^1.0.0"
ska-ser-sphinx-theme = "^0.1.2"


[tool.pytest.ini_options]
addopts = "-v"

[tool.flake8]
docstring-style = "sphinx"
rst-directives = "literalinclude"
rst-roles = ["py:attr", "py:class", "py:const", "py:exc", "py:func", "py:meth", "py:mod"]
enable = "DAR104"
max-complexity = 10

# E203 and W503 conflict with black
ignore = ["E203", "W503"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
]
enable = ["useless-suppression"]

[tool.pylint.similarities]
min-similarity-lines = 7
ignore-imports = "yes"


[tool.black]
line-length = 88
preview = true
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | src/ska_oso_slt_services/rest/openapi/__submodules__
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
line_length = 88
skip = "src/ska_oso_slt_services/rest/openapi/__submodules__"

[tool.pylint]
disable = "C,R,W3101,W0511"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

